--- a/config/sway/config
+++ b/config/sway/config
@@ -230,6 +230,7 @@ for_window [app_id="nemo" title="^Folder Sharing$"] floating enable
 for_window [app_id="firefox"]     inhibit_idle fullscreen
 for_window [app_id="mpv"]         inhibit_idle
 for_window [class="vlc"]          inhibit_idle
+for_window [class="Spotify"]      inhibit_idle fullscreen
 
 # title rules
 
