--- a/tmux.conf
+++ b/tmux.conf
@@ -18,8 +18,8 @@ bind -n M-Down select-pane -D
 
 # Quickly switch between windows
 # Commented because interfers with word navigation
-bind -n C-Left previous-window
-bind -n C-Right next-window
+#bind -n C-Left previous-window
+#bind -n C-Right next-window
 
 # Better renaming
 set-option -g allow-rename off
