kitty: disable font ligatures when hovering them

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -2,6 +2,8 @@
 
 font_family Noto Sans
 font_size 11
+# Disable ligatures only when hovering
+disable_ligatures cursor
 
 ## Cursor customization
 
