--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -9,6 +9,7 @@ disable_ligatures cursor
 
 cursor #dddddd
 cursor_text_color #000000
+cursor_stop_blinking_after 20.0
 
 ## Scrollback
 
@@ -19,6 +20,8 @@ scrollback_pager_history_size 64
 ## Mouse
 
 mouse_hide_wait 2.5
+
+# Links
 
 url_color #0898d1
 url_style single
