--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -61,5 +61,12 @@ map kitty_mod+minus change_font_size all -0.5
 # Reset font size with mod+0 (à in azerty)
 map kitty_mod+0xe0 change_font_size all 0
 
-# Work around slow line-based scroll on Wayland
+# Markers
+map f2 create_marker
+map f3 remove_marker
+map ctrl+p scroll_to_mark prev
+map ctrl+n scroll_to_mark next
+
+## Work around slow line-based scroll on Wayland
+
 touch_scroll_multiplier 8
