tmux: set TERM to tmux-256color

--- a/tmux.conf
+++ b/tmux.conf
@@ -10,7 +10,6 @@ bind | split-window -h
 bind - split-window -v
 
 # Quickly switch between panes
-# Commented because interfers with irssi
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
@@ -23,3 +22,6 @@ bind -n M-Down select-pane -D
 
 # Better renaming
 set-option -g allow-rename off
+
+# Fix some apps
+set -g default-terminal "tmux-256color"
