--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -25,7 +25,7 @@ mouse_hide_wait 2.5
 
 url_color #0898d1
 url_style single
-open_url_modifiers ctrl
+open_url_modifiers ctrl+shift
 
 ## Terminal bell
 
