--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -7,7 +7,7 @@ disable_ligatures cursor
 
 ## Cursor customization
 
-cursor #dddddd
+cursor #eeeeee
 cursor_text_color #000000
 cursor_stop_blinking_after 20.0
 
@@ -38,6 +38,32 @@ background #000000
 
 selection_foreground #000000
 selection_background #d0baf5
+
+# Colors (normal and bright version)
+# black
+#color0
+#color8
+# red
+color1 #c92120
+#color9
+# green
+#color2
+#color10
+# yellow
+color3 #c4c20c
+#color11
+# blue
+color4 #007be8
+#color12
+# magenta
+#color5
+#color13
+# cyan
+#color6
+#color14
+# white
+#color7
+#color15
 
 ## Advanced
 
