kitty: change scroll_to_mark shortcut
ctrl+p/n interfere with Weechat shortcuts.

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -90,8 +90,8 @@ map kitty_mod+0xe0 change_font_size all 0
 # Markers
 map f2 create_marker
 map f3 remove_marker
-map ctrl+p scroll_to_mark prev
-map ctrl+n scroll_to_mark next
+map ctrl+shift+p scroll_to_mark prev
+map ctrl+shift+n scroll_to_mark next
 
 ## Work around slow line-based scroll on Wayland
 
