kitty: exclude vim newline characters from URL detection

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -26,6 +26,7 @@ mouse_hide_wait 2.5
 url_color #0898d1
 url_style single
 open_url_modifiers ctrl+shift
+url_excluded_characters ¬
 
 ## Terminal bell
 
