--- a/config/autorandr/wfh/config
+++ b/config/autorandr/wfh/config
@@ -6,21 +6,22 @@ output DP-3
 off
 output DP-4
 off
-output DP-3-1
+output DP-1-1
 off
-output DP-3-1-1
-crtc 0
-mode 1920x1080
-pos 0x0
-primary
-rate 60.00
-output DP-3-1-8
+output DP-1-1-1
 crtc 2
 mode 1920x1080
-pos 1920x0
+pos 2560x0
 rate 60.00
+rotate left
+output DP-1-1-8
+crtc 0
+mode 2560x1440
+pos 0x240
+primary
+rate 59.95
 output eDP-1
 crtc 1
 mode 1920x1200
-pos 3840x0
+pos 3640x360
 rate 59.95
