git: add delete-remote-tag alias
I know it looks ridiculous but I can *never* remember this git push
origin --delete thing. Sorry not sorry.

--- a/config/git/config
+++ b/config/git/config
@@ -17,6 +17,7 @@
   cmm = commit -m
   d = diff
   delete-remote-branch = push origin --delete
+  delete-remote-tag = push origin --delete
   initial-commit = "!git commit -m \"Initial commit\" --allow-empty"
   logs = log --show-signature
   pa = pull --all
