nemo: add custom scripts

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -23,6 +23,7 @@
       create: true
       force: true
       path: icons/default/index.theme
+    ~/.local/share/nemo: local/share/nemo
     ~/.tmux.conf:
     ~/.vim:
     ~/.xinitrc:
