kitty: use underline cursor shape
c'est stylé en fait

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -10,6 +10,7 @@ disable_ligatures cursor
 cursor #eeeeee
 cursor_text_color #000000
 cursor_stop_blinking_after 20.0
+cursor_shape underline
 
 ## Scrollback
 
