--- a/config/i3/config
+++ b/config/i3/config
@@ -328,8 +328,8 @@ for_window [title="Network Operations Manager"] border pixel 2
 for_window [title="Network Operations Manager"] floating enable
 for_window [title="^Page Info"] border pixel 2
 for_window [title="^Page Info"] floating enable
-for_window [title="Plugins"] border pixel 2
-for_window [title="Plugins"] floating enable
+for_window [title="Plugins$"] border pixel 2  # end with this, otherwise matches Firefox on some pages
+for_window [title="Plugins$"] floating enable
 for_window [title="Qt Configuration"] border pixel 2
 for_window [title="Qt Configuration"] floating enable
 for_window [title="^Task Manager"] border pixel 2
