kitty: update config for latest version
Force stick to my favorite cursor shape (underline), and make use of the
"right click to select previous command output" feature.

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -11,6 +11,8 @@ cursor #eeeeee
 cursor_text_color #000000
 cursor_stop_blinking_after 20.0
 cursor_shape underline
+# Prevent cursors changes by kitty shell integration
+shell_integration no-cursor
 
 ## Scrollback
 
@@ -93,6 +95,9 @@ map f2 create_marker
 map f3 remove_marker
 map ctrl+shift+p scroll_to_mark prev
 map ctrl+shift+n scroll_to_mark next
+
+# select whole command output on right click
+mouse_map right press ungrabbed mouse_select_command_output
 
 ## Work around slow line-based scroll on Wayland
 
