i3: set handy launcher shortcut for qwerty as well

--- a/config/i3/config
+++ b/config/i3/config
@@ -370,6 +370,7 @@ bindsym $super+q      exec "rofimoji"
 
 # Program launcher
 bindsym   $super+w    exec --no-startup-id "rofi -show drun -show-icons"
+bindsym   $super+z    exec --no-startup-id "rofi -show drun -show-icons"
 bindsym   $super+x    exec --no-startup-id "rofi -show run"
 
 # Window switcher
