i3: add more floating rules

--- a/config/i3/config
+++ b/config/i3/config
@@ -277,6 +277,8 @@ for_window [class="File-roller"] border pixel 2
 for_window [class="File-roller"] floating enable
 for_window [class="Gedit"] floating enable
 for_window [class="Gnome-calculator"] floating enable
+for_window [class="Gnome-system-monitor"] border pixel 2
+for_window [class="Gnome-system-monitor"] floating enable
 for_window [class="Gpicview"] floating enable
 for_window [class="Gpicview"] move position center
 for_window [class="^imv$"] floating enable
