i3: add floating rule for Remmina

--- a/config/i3/config
+++ b/config/i3/config
@@ -295,6 +295,8 @@ for_window [class="Lxappearance"] floating enable
 for_window [class="Mojosetup"] border pixel 2
 for_window [class="Mojosetup"] floating enable
 for_window [class="nitrogen"] floating enable
+for_window [class="org.remmina.Remmina"] border pixel 2
+for_window [class="org.remmina.Remmina"] floating enable
 for_window [class="Parole"] floating enable
 for_window [class="Pinentry-gtk-2"] border pixel 2
 for_window [class="Pinentry-gtk-2"] floating enable
