libinput-gestures: fix for X11
yeah I switched to Wayland and then back to X11 for, uh, reasons

--- a/config/libinput-gestures.conf
+++ b/config/libinput-gestures.conf
@@ -33,14 +33,18 @@
 # finger_count.
 #
 
-gesture swipe left  swaymsg workspace next
-gesture swipe right swaymsg workspace prev
+#gesture swipe left  swaymsg workspace next
+gesture swipe left	i3-msg workspace next
+#gesture swipe right swaymsg workspace prev
+gesture swipe right	i3-msg workspace prev
 
 # ydotool key list:
 # https://github.com/YukiWorkshop/libevdevPlus/blob/master/Resource.cpp
 
-gesture swipe up    ydotool key KEY_BACK
-gesture swipe down  ydotool key KEY_FORWARD
+#gesture swipe up    ydotool key KEY_BACK
+gesture swipe up	xdotool key XF86Back
+#gesture swipe down  ydotool key KEY_FORWARD
+gesture swipe down	xdotool key XF86Forward
 
 # Conflicts with Firefox's pinch-to-zoom
 #gesture pinch out   ydotool key Ctrl+KEY_KPPLUS
