fonts: improve default fonts to better support emojis

--- a/config/fontconfig/fonts.conf
+++ b/config/fontconfig/fonts.conf
@@ -8,23 +8,32 @@
       <bool>false</bool>
     </edit>
   </match>
-  <!-- Get nice emojis in terminal :) -->
-  <alias>
-    <family>serif</family>
-    <prefer>
-      <family>Noto Color Emoji</family>
-    </prefer>
-  </alias>
   <alias>
     <family>sans-serif</family>
     <prefer>
+      <family>Noto Sans</family>
       <family>Noto Color Emoji</family>
+      <family>Noto Emoji</family>
+      <family>DejaVu Sans</family>
     </prefer>
   </alias>
+ 
   <alias>
-    <family>monospace</family>
+    <family>serif</family>
     <prefer>
+      <family>Noto Serif</family>
       <family>Noto Color Emoji</family>
+      <family>Noto Emoji</family>
+      <family>DejaVu Serif</family>
+    </prefer>
+  </alias>
+ 
+  <alias>
+   <family>monospace</family>
+   <prefer>
+     <family>Noto Mono</family>
+     <family>Noto Color Emoji</family>
+     <family>Noto Emoji</family>
     </prefer>
   </alias>
 </fontconfig>
