picom: sync config
Works fine since a few weeks.

--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -209,13 +209,12 @@ fading = false
 # Specify the backend to use: `xrender`, `glx`, or `xr_glx_hybrid`.
 # `xrender` is the default one.
 #
-# saumon: artifacts with xrender
-backend = "glx";
-# backend = "xrender";
+#backend = "glx";
+backend = "xrender";
 
 # Enable/disable VSync.
 # vsync = false
-vsync = true;
+#vsync = true;
 
 # Enable remote control via D-Bus. See the *D-BUS API* section below for more details.
 # dbus = false
@@ -246,7 +245,7 @@ detect-client-opacity = true;
 # try detecting this with X RandR extension.
 #
 # refresh-rate = 60
-refresh-rate = 0
+refresh-rate = 60
 
 # Limit picom to repaint at most once every 1 / 'refresh_rate' second to 
 # boost performance. This should not be used with 
@@ -331,7 +330,7 @@ use-damage = true
 # calls are finished before picom starts drawing. Needed on nvidia-drivers 
 # with GLX backend for some users.
 #
-# xrender-sync-fence = false
+xrender-sync-fence = true
 
 # GLX backend: Use specified GLSL fragment shader for rendering window contents. 
 # See `compton-default-fshader-win.glsl` and `compton-fake-transparency-fshader-win.glsl` 
