--- a/config/i3/config
+++ b/config/i3/config
@@ -149,6 +149,15 @@ bindsym --whole-window button17 workspace next
 bindsym $mod+Tab workspace back_and_forth
 bindsym $super+Tab workspace back_and_forth
 
+# Move workspace to next monitor
+bindsym $mod+x move workspace to output next
+
+# Make the currently focused window a scratchpad
+bindsym $mod+Shift+minus move scratchpad
+
+# Show the first scratchpad window
+bindsym $mod+minus scratchpad show
+
 
 ##################################################
 # Resize mode
@@ -277,11 +286,15 @@ for_window [class="File-roller"] border pixel 2
 for_window [class="File-roller"] floating enable
 for_window [class="Gedit"] floating enable
 for_window [class="Gnome-calculator"] floating enable
+for_window [class="Ghb"] border pixel 2  # HandBrake
+for_window [class="Ghb"] floating enable
 for_window [class="Gnome-system-monitor"] border pixel 2
 for_window [class="Gnome-system-monitor"] floating enable
-for_window [class="Gpicview"] floating enable
-for_window [class="Gpicview"] move position center
-for_window [class="^imv$"] floating enable
+for_window [class="Gucharmap"] border pixel 2
+for_window [class="Gucharmap"] floating enable
+#for_window [class="Gpicview"] floating enable
+#for_window [class="Gpicview"] move position center
+#for_window [class="^imv$"] floating enable
 for_window [class="java-lang-Thread" title="^win0"] border pixel 2 # jetbrains splashscreen
 for_window [class="java-lang-Thread" title="win0"] floating enable
 for_window [class="jetbrains-toolbox"] border pixel 2
@@ -297,6 +310,8 @@ for_window [class="Mojosetup"] floating enable
 for_window [class="nitrogen"] floating enable
 for_window [class="org.remmina.Remmina"] border pixel 2
 for_window [class="org.remmina.Remmina"] floating enable
+#for_window [class="Image Lounge"] border pixel 2  # nomacs
+#for_window [class="Image Lounge"] floating enable  # nomacs
 for_window [class="Parole"] floating enable
 for_window [class="Pinentry-gtk-2"] border pixel 2
 for_window [class="Pinentry-gtk-2"] floating enable
