i3: add more floating conditions

--- a/config/i3/config
+++ b/config/i3/config
@@ -305,6 +305,8 @@ for_window [class="lite"] border pixel 2
 for_window [class="lite"] floating enable
 for_window [class="Lxappearance"] border pixel 2
 for_window [class="Lxappearance"] floating enable
+for_window [class="Mediainfo-gui"] border pixel 2
+for_window [class="Mediainfo-gui"] floating enable
 for_window [class="Mojosetup"] border pixel 2
 for_window [class="Mojosetup"] floating enable
 for_window [class="nitrogen"] floating enable
