--- a/config/git/config
+++ b/config/git/config
@@ -13,6 +13,7 @@
   amend = commit --amend
   addd = add
   ass = add
+  b = branch
   c = checkout
   cm = commit
   cmm = commit -m
@@ -35,7 +36,7 @@
   pyull = pull
   r = restore
   rs = restore --staged
-  sc = "!git commit -am \"Sync commit\" && git push"
+  sc = "!git pull && git commit -am \"Sync commit\" && git push"
   sd = diff --staged
   set-upstream = "!git branch --set-upstream-to=origin/`git symbolic-ref --short HEAD`"
   s = switch
