kitty: change lots of config, add search kitten

--- a/.gitmodules
+++ b/.gitmodules
@@ -15,3 +15,6 @@
 	path = config/i3/scripts
 	url = git@github.com:maximelouet/i3blocks-scripts
   branch = master
+[submodule "config/kitty/kitty_search"]
+	path = config/kitty/kitty_search
+	url = https://github.com/trygveaa/kitty-kitten-search
