--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,9 +1,15 @@
 ## Fonts
 
-font_family Noto Sans
-font_size 9
-# Disable ligatures only when hovering
+# JetBrains Mono Nerd-patched
+font_family JetBrainsMono NF
+font_size 10.0
+# disable ligatures only when cursor is on it
 disable_ligatures cursor
+
+# make underlines slightly more visible
+modify_font underline_position 2
+modify_font underline_thickness 150%
+
 
 ## Cursor customization
 
@@ -11,8 +17,9 @@ cursor #eeeeee
 cursor_text_color #000000
 cursor_stop_blinking_after 20.0
 cursor_shape underline
-# Prevent cursors changes by kitty shell integration
+# prevent cursors changes by kitty shell integration
 shell_integration no-cursor
+
 
 ## Scrollback
 
@@ -20,19 +27,39 @@ scrollback_lines 50000
 # in MB:
 scrollback_pager_history_size 64
 
+
 ## Mouse
 
+# hide mouse after this many seconds
 mouse_hide_wait 2.5
+# select whole command output on right click
+mouse_map right press ungrabbed mouse_select_command_output
+# scroll faster
+touch_scroll_multiplier 10
+# double-click maximum interval in seconds (seems to be higher than that though)
+click_interval 0.3
 
-# Links
+
+## Links
 
 url_color #0898d1
-url_style single
+url_style straight
 url_excluded_characters ¬
+
 
 ## Terminal bell
 
 enable_audio_bell no
+# quick flash on bell
+visual_bell_duration 0.3
+visual_bell_color #774444
+window_alert_on_bell yes
+
+
+## Paste security
+# auto quote URLs if needed, and confirm pasting large amounts of data
+paste_actions quote-urls-at-prompt,confirm
+
 
 ## Color scheme
 
@@ -40,33 +67,8 @@ foreground #eeeeee
 background #000000
 
 selection_foreground #000000
-selection_background #d0baf5
+selection_background #e0caf5
 
-# Colors (normal and bright version)
-# black
-#color0
-#color8
-# red
-color1 #c92120
-#color9
-# green
-#color2
-#color10
-# yellow
-color3 #c4c20c
-#color11
-# blue
-color4 #007be8
-#color12
-# magenta
-#color5
-#color13
-# cyan
-#color6
-#color14
-# white
-#color7
-#color15
 
 ## Advanced
 
@@ -74,17 +76,24 @@ color4 #007be8
 # background processes running
 close_on_child_death yes
 
+# do not check for updates; might not be needed since it's installed through pacman
 update_check_interval 0
+
 
 ## Keyboard shortcuts and mappings
 
-kitty_mod ctrl+alt
-
+# open whole scrollback in PAGER
 map f1 show_scrollback
+# search google for selection
 map kitty_mod+x pass_selection_to_program ~/scripts/pass-kitty-selection-to-firefox.sh
-map kitty_mod+e kitten hints --customize-processing weechat-hints.py
+map ctrl+alt+x pass_selection_to_program ~/scripts/pass-kitty-selection-to-firefox.sh
 
-# Finer font size control than default
+# ctrl-alt equivalents of some ctrl-shift commands, for ease of use
+map ctrl+alt+e kitten hints
+map ctrl+alt+c copy_to_clipboard
+map ctrl+alt+v paste_from_clipboard
+
+# finer font size control than default
 map kitty_mod+equal change_font_size all +0.5
 map kitty_mod+minus change_font_size all -0.5
 # Reset font size with mod+0 (à in azerty)
@@ -96,9 +105,5 @@ map f3 remove_marker
 map ctrl+shift+p scroll_to_mark prev
 map ctrl+shift+n scroll_to_mark next
 
-# select whole command output on right click
-mouse_map right press ungrabbed mouse_select_command_output
-
-## Work around slow line-based scroll on Wayland
-
-touch_scroll_multiplier 8
+# search
+map kitty_mod+/      launch --allow-remote-control kitty +kitten kitty_search/search.py @active-kitty-window-id
