--- a/config/kitty/open-actions.conf
+++ b/config/kitty/open-actions.conf
@@ -1,5 +1,4 @@
-# Open any file with a fragment in vim; fragments are generated
-# by the hyperlink_grep kitten and nothing else so far.
+# Open any file with a fragment in vim
 protocol file
 fragment_matches [0-9]+
 action launch --type=overlay vim +${FRAGMENT} ${FILE_PATH}
