kitty: make selections easier to read

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -10,6 +10,9 @@ disable_ligatures cursor
 modify_font underline_position 2
 modify_font underline_thickness 150%
 
+# make dark text on light backgrounds easier to read
+text_composition_strategy 2.0 0
+
 
 ## Cursor customization
 
