kitty: toggle ligatures with f2/f3
Remove marker shortcuts as I'm not using them anyway.

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -102,11 +102,9 @@ map kitty_mod+minus change_font_size all -0.5
 # Reset font size with mod+0 (à in azerty)
 map kitty_mod+0xe0 change_font_size all 0
 
-# Markers
-map f2 create_marker
-map f3 remove_marker
-map ctrl+shift+p scroll_to_mark prev
-map ctrl+shift+n scroll_to_mark next
-
 # search
 map kitty_mod+/      launch --allow-remote-control kitty +kitten kitty_search/search.py @active-kitty-window-id
+
+# toggle ligatures in current view
+map f2 disable_ligatures_in active always
+map f3 disable_ligatures_in active cursor
