kitty: tweak tabs design

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -83,6 +83,24 @@ close_on_child_death yes
 update_check_interval 0
 
 
+## Layout
+
+tab_bar_edge top
+tab_bar_style separator
+tab_separator "│"
+tab_activity_symbol ⚡
+tab_title_max_length 60
+# default template, with some padding
+tab_title_template " {fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{title} "
+# some color tweaking to match system theme
+tab_bar_background #222
+active_tab_foreground #fff
+active_tab_background #c42bbd
+inactive_tab_foreground #aaa
+inactive_tab_background #2f2f3f
+active_tab_font_style normal
+
+
 ## Keyboard shortcuts and mappings
 
 # open whole scrollback in PAGER
